--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ body{
     background-color: #ffffff;
 }
 
+.canvas_playground_container{
+    display: flex;
+    flex-direction: column;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -29,23 +34,55 @@ nav {
 }
 
 .main{
-    position: relative;
-    display: grid;
-    grid-template-columns: 20vw 20vw 20vw;
-    gap: 5vw;
-    margin: 25px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.card1 {
+.card_container{
+    flex-basis: 25%;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+/* On screens that are 992px wide or less, go from four columns to two columns */
+@media screen and (max-width: 992px) {
+    .card_container {
+        flex: 50%;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+.main {
+    flex-direction: column;
+}
+
+.card_container{
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+}
+
+.card1{
+    width: 80%;
+    height: 90%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 100%;
     border-radius: 5px;
-    background-color: rgb(248, 248, 248);
+    background-color: hsl(0, 0%, 94%);
 }
 
 img {
-    height: 30vh;
+    height: 50%;
     border-radius: 5px 5px 0 0;
 }
 
@@ -54,8 +91,12 @@ img {
     font-family: 'Noto Sans', sans-serif;
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 30% 70%;
-    padding: 16px 16px;
+    padding: 0 16px;
+}
+
+.card1 h2{
+    text-align: center;
+    margin: 0%;
 }
 
 .parent_container{
