--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ nav {
 
 .card_container{
     flex-basis: 25%;
-    height: 350px;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,9 +49,10 @@ nav {
   
 /* On screens that are 992px wide or less, go from four columns to two columns */
 @media screen and (max-width: 992px) {
+
     .card_container {
-        flex: 50%;
-        height: 300px;
+        flex-basis: 50%;
+        height: 350px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -61,7 +62,7 @@ nav {
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
 .main {
-    flex-direction: column;
+    display: block;
 }
 
 .card_container{
@@ -73,50 +74,46 @@ nav {
 }
 
 .card1{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 80%;
     height: 90%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
+    box-shadow: 2px 2px;
     background-color: hsl(0, 0%, 94%);
-}
-
-img {
-    height: 50%;
-    border-radius: 5px 5px 0 0;
-}
-
-
-.container {
-    font-family: 'Noto Sans', sans-serif;
-    display: grid;
-    grid-template-columns: 70% 30%;
-    padding: 0 16px;
-}
-
-.card1 h2{
-    text-align: center;
-    margin: 0%;
-}
-
-.parent_container{
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-  
-.play-button {
-    border-style: solid;
-    border-width: 2em 0 2em 4em;
-    border-color: transparent transparent transparent #eb243b;
-    opacity: .75; 
     cursor: pointer;
 }
 
-.play-button:hover{
-    border-color: transparent transparent transparent #24eb95;
-    opacity: .75;
+.card1:hover{
+    box-shadow: 10px 10px;
 }
+
+.card-image{
+    width: 90%;
+    height: 60%;
+    padding-top: 10px;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px 5px 0 0;
+}
+
+.card-content{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    padding: 0 10px;
+}
+
+.link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
